doc/front_end/portal02/static/css/main.css
/*
 * main.css
 * pc.peng @ 20170606
 */

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}


/*
 * Global add-ons
 */
 
.img-logo {
    height: 24px;
}

.sub-header {
    padding-bottom: 10px;
    border-bottom: 1px dashed #eee;
}

/* panel */
.panel, .panel-default {
    border-color: #e4e4e4;
    border: 1px dotted transparent;
    position: relative;
    box-shadow: none;
}
.panel-group .panel-heading {
    padding: 0;
}
.panel-body {
    background: #fff;
    margin: 0;
	min-height: 100px;
}
.accordion-toggle {
    display: block;
	line-height: 10px;
    padding: 10px 20px;
    position: relative;
}
.accordion-toggle:after {
    color: #aaa;
    content: "\262f";
    font-size: 20px;
    position: absolute;
    top: 20px;
    right: 10px;
}
.label {
    text-shadow: 0 -1px 0 rgba(0,0,0,.2);
    font-weight: 600;
}
.label.label-tag {
    display: inline-block;
    font-size: 11px;
    line-height: 18px;
    margin-left: 12px;
    padding: 0 5px;
    position: relative;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
}
.label.label-tag:before {
    content: "";
    display: block;
    position: absolute;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 10px 12px 10px 0;
    margin-left: -17px;
    top: -1px;
}
.label.label-tag:after {
    content: "";
    display: block;
    background: #fff;
    position: absolute;
    width: 6px;
    height: 6px;
    border-radius: 99px;
    margin: -12px 0 0 -10px;
}
.label.label-success.label-tag:before {
    border-color: transparent #5cb85c transparent transparent;
}



/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 50px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 10px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    border-right: 1px solid #eee;
  }
}


/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}



/*
 * Placeholder dashboard ideas
 */
.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h5 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 20%;
  width: 32px;
  height: 32px;
}

